Linking to mines.html

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <p>minesweeper, but in javascript, and in the browser</p>
         <p class="view"><a href="https://github.com/CerealBoy/minesweeper">View the Project on GitHub <small>CerealBoy/minesweeper</small></a></p>
         <ul>
-          <li><a href="https://github.com/CerealBoy/minesweeper/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/CerealBoy/minesweeper/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="mines.html">Play now</a></li>
           <li><a href="https://github.com/CerealBoy/minesweeper">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
